# Articles_app

./: .env.template  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: article_tests_ci.yml
alembic/: env.py
alembic/versions/: 0001_init.py
api/v1/endpoints/: articles.py  auth.py  comments.py
backend/: .env.template  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_model_user_add_field.py  0003_add_field_conf_reg_link.py  0004_add_on_delete.py  0005_change_on_delete_cascade.py  0006_add_on_delete_fix.py
backend/api/v1/endpoints/: articles.py  auth.py  comments.py  users.py
backend/commands/: commands.py
backend/core/: config.py  decorators.py  security.py
backend/crud/: articles.py  comments.py  user.py
backend/db/: session.py
backend/db/models/: __init__.py  article.py  comment.py  user.py
backend/email/: email.py
backend/email/templates/: reg_confirm.html
backend/fast_api_email/: fast_api_email.py
backend/my_email/: my_email.py
backend/my_email/templates/: reg_confirm.html
backend/schemas/: comment.py  user.py
backend/tasks/: celery_app.py  email_tasks.py
backend/tests/: conftest.py  docker-compose.yml
backend/tests/test_api/: test_articles.py  test_auth.py  test_comments.py  test_users.py
backend/tests/test_crud/: test_article.py  test_comment.py  test_user.py
backend/tests/test_send_email/: test_send_email.py
core/: security.py
crud/: articles.py  comments.py  user.py
db/: session.py
db/models/: __init__.py  article.py  comment.py  user.py
schemas/: article.py  comment.py  user.py
