[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "alex",email = "alex_77_90@mail.ru"}
]
requires-python = ">=3.12,<4.0"
[tool.poetry.dependencies]
sqlalchemy = ">=2.0.40,<3.0.0"
fastapi = ">=0.115.12,<0.116.0"
asyncpg = ">=0.30.0,<0.31.0"
pydantic = { version = ">=2.11.3,<3.0.0", extras = ["email"] }
uvicorn = ">=0.34.2,<0.35.0"
python-jose = { version = ">=3.4.0,<4.0.0", extras = ["cryptography"] }
python-multipart = ">=0.0.20,<0.0.21"
argon2-cffi = ">=23.1.0,<24.0.0"
alembic = ">=1.15.2,<2.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
fastapi-mail = ">=1.4.2,<2.0.0"
celery = ">=5.5.2,<6.0.0"
redis = ">=5.2.1,<6.0.0"
asgiref = ">=3.8.1,<4.0.0"
gevent = "^25.4.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
